8310659: The jar tool should support allowing access to restricted methods from executable jars
Reviewed-by: mcimadamore